# candle_flame

./: .gitignore  INTERFACE.md  README.md  ROADMAP.md  __init__.py  __main__.py  app.py  camera.py  canvas.py  controls.py  geometry.py  noise.py  particles.py  pyproject.toml  renderer.py  requirements.txt  run_candle.py  shaders.py
candle/: canvas.py  controls.py  main_window.py  take_screenshots.py
jsx/: candle_flame.jsx
tests/: test_camera.py  test_noise.py  test_particles.py
